--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "tsc && node dist/src/index.js",
-    "dev": "ts-node-dev --transpile-only src/index.ts",
+    "dev": "nodemon --exec ts-node-dev --transpile-only src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
@@ -25,12 +25,12 @@
     "typescript",
     "api"
   ],
-  "author": "Waldemar Neto",
+  "author": "Ederney Pedroso",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/waldemarnt/node-typescript-api/issues"
+    "url": "https://github.com/EderneyJunior/api-meteorologia-typescript/issues"
   },
-  "homepage": "https://github.com/waldemarnt/node-typescript-api#readme",
+  "homepage": "https://github.com/EderneyJunior/api-meteorologia-typescript#readme",
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
     "@types/express": "^4.17.13",
@@ -47,12 +47,12 @@
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^8.5.0",
-    "jest": "^27.4.5",
-    "prettier": "^2.5.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3",
     "supertest": "^6.1.6",
-    "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4"
+    "typescript": "^5.5.4"
   },
   "directories": {
     "test": "test"
