--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "supertest": "^6.1.6",
+    "ts-jest": "^29.2.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^5.5.4"
   },
